@@ -19,7 +19,6 @@ import mx.gob.pjpuebla.trials.error.InvalidVersionException;
 import mx.gob.pjpuebla.trials.error.NotFoundException;
 import mx.gob.pjpuebla.trials.error.ConflictException;
 import mx.gob.pjpuebla.trials.util.Messages;
-import mx.gob.pjpuebla.trials.util.SearchLikeEnum;
 import mx.gob.pjpuebla.trials.util.enums.Estado;
 import mx.gob.pjpuebla.trials.util.enums.InstanciaJuzgado;
 import mx.gob.pjpuebla.trials.util.enums.TipoCarpeta;
@@ -38,6 +37,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -60,22 +60,21 @@ public class JuzgadoService {
 
     @Transactional(readOnly = true)
     public Page<JuzgadoRecordItem> getAll(String key, Pageable pageable) {
-        key = (key != null) ? key.toLowerCase() : "";
-        List<Estado> status = SearchLikeEnum.searchByEstadoEnum(key);
-        if (status.isEmpty()) {
-            status = Arrays.asList(Estado.ACTIVE, Estado.INACTIVE);
-        } else {
-            key = "";
-        }
-        Page<Juzgado> page = juzgadoRepository.findAll(key, status, pageable);
+        String finalKey = (key != null) ? StringUtils.stripAccents(key).toLowerCase() : "";
 
+        Page<Juzgado> page = juzgadoRepository.findAll(PageRequest.of(pageable.getPageNumber(), pageable.getPageSize()));
         List<JuzgadoRecordItem> list = page.getContent().stream()
+                .filter(juzgado -> finalKey.isEmpty() || StringUtils.stripAccents(juzgado.getNombre())
+                        .toLowerCase()
+                        .contains(finalKey))
                 .map(juzgado -> new JuzgadoRecordItem(
                         juzgado.getId(),
                         juzgado.getNombre(),
                         juzgado.getEstado(),
-                        StringUtils.capitalize(juzgado.getMateria().getNombre().toLowerCase())
-                )).toList();
+                        StringUtils.capitalize(StringUtils.stripAccents(juzgado.getMateria().getNombre()).toLowerCase())
+                ))
+                .collect(Collectors.toList());
+
         return new PageImpl<>(list, pageable, page.getTotalElements());
     }
 
@@ -229,7 +228,6 @@ public class JuzgadoService {
     }
 
     public Juzgado getJuzgado(TipoJuicio tipoJuicio, TipoCarpeta tipoCarpeta, List<Juzgado> juzgadosRelacionados) {
-
         InstanciaJuzgado instanciaJuzgado;
         String reason;
 
@@ -255,7 +253,7 @@ public class JuzgadoService {
             revisarCargaJuzgados(tipoJuicio.getMateria(), tipoCarpeta);
             juzgados = juzgadoRepository.findJuzgadosMenosAsignaciones(tipoJuicio.getMateria(), instanciaJuzgado,
                     juzgadosRelacionados.stream().map(Juzgado::getId).toList());
-
+        
             if (juzgados.isEmpty()){
                 if (TipoCarpeta.APELACION.name().equals(tipoCarpeta.name())) {
                     throw new NotFoundException(reason, tipoJuicio.getNombre());
@@ -266,6 +264,7 @@ public class JuzgadoService {
         }
 
         int rand = RANDOM.nextInt(juzgados.size());
+
         return juzgados.get(rand);
 
     }
@@ -297,6 +296,7 @@ public class JuzgadoService {
     }
 
     public JuzgadoFolios getJuzgadoFolios(Juzgado juzgado, TipoCarpeta tipoCarpeta) {
+
         return juzgadoFoliosRepository.findByJuzgadoAndTipoCarpeta(juzgado, tipoCarpeta)
                 .orElseThrow(() -> new NotFoundException("juzgadoFolio no encontrado", "tipoCarpeta"));
     }
